@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-01T00:46:31Z",
-  "count_outdated" : 2931,
-  "uniques_outdated" : 950,
+  "timestamp" : "2025-03-03T00:44:32Z",
+  "count_outdated" : 2934,
+  "uniques_outdated" : 952,
   "count" : 2939,
   "uniques" : 956,
   "views" : [
-    {
-      "timestamp": "2025-02-16T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-02-17T00:00:00Z",
       "count": 1,
