@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 6,
+  "count": 5,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2025-02-16T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-02-17T00:00:00Z",
       "count": 1,
